--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ wasm-bindgen = "0.2.84"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
-pulldown-cmark = "0.13.0"
 web-sys = { version = "0.3.77", features = [
   "Document",
   "Element",
@@ -27,6 +26,7 @@ web-sys = { version = "0.3.77", features = [
   "console",
 ] }
 js-sys = "0.3.77"
+markdown = "1.0.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
