--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.13",
     "katex": "^0.16.22",
     "lucide-react": "^0.542.0",
     "mermaid": "^11.10.1",
