--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "html-to-image": "^1.11.13",
+  "html-to-image": "^1.11.13",
+  "jspdf": "^2.5.1",
     "katex": "^0.16.22",
     "lucide-react": "^0.542.0",
     "mermaid": "^11.10.1",
